--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,10 +19,12 @@ const { title } = Astro.props as Props;
 <body>
   <slot />
   <script is:inline>
-    document.getElementById('art').style.display = 'flex';
-    document.getElementById('3d').style.display = 'none';
-    document.getElementById('music').style.display = 'none';
-    document.getElementById('basic').style.display = 'none';
+    window.addEventListener('load', function () {
+      document.getElementById('art').style.display = 'flex';
+      document.getElementById('3d').style.display = 'none';
+      document.getElementById('music').style.display = 'none';
+      document.getElementById('basic').style.display = 'none';
+    })
 
     window.addEventListener('scroll', function () {
       let header = document.querySelector('header');
