--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import ShapeFrames from '../components/ShapeFrames/index.vue';
 import FeatureCard from '../components/FeatureCard/index.astro';
 import ContentCard from '../components/ContentCard/index.astro';
 import { Icon } from 'astro-icon'
+import ContactInfo from '../components/ContactInfo/index.astro';
 
 type TextColors = {
 	text: string;
@@ -77,6 +78,7 @@ const cards = [
 			cssClasses: 'text-[#6F55A5] rotate-270'
 		},
 		background: 'bg-[#6927F420]',
+		id: 'goToArt'
 	},
 	{
 		text: [
@@ -103,6 +105,7 @@ const cards = [
 			cssClasses: 'text-[#E31B6F]'
 		},
 		background: 'bg-[#D8248F20]',
+		id: 'goTo3d'
 	},
 	{
 		text: [
@@ -133,6 +136,7 @@ const cards = [
 			cssClasses: 'text-[#1D641B]'
 		},
 		background: 'bg-[#31EA2D20]',
+		id: 'goToMusic'
 	},
 	{
 		text: [
@@ -158,6 +162,7 @@ const cards = [
 			cssClasses: 'text-[#3858AD]'
 		},
 		background: 'bg-[#27C3F420]',
+		id: 'goToBasic'
 	}
 ]
 
@@ -228,7 +233,7 @@ const contentCards = [
 	</section>
 	<section class="flex justify-center items-center w-full pt-24 pb-12 gap-3">
 		{cards.map((card, index) => (
-		<FeatureCard background={card.background} cardText={card.text} icon={card.icon} href="#content" id="goToArt" />
+		<FeatureCard background={card.background} cardText={card.text} icon={card.icon} href="#content" id={card.id} />
 		))}
 	</section>
 	<section class="h-screen w-full relative" id="content">
@@ -240,10 +245,38 @@ const contentCards = [
 		<ContentCard text={card.text} image={card.image} type={card.type} id={card.id} />
 		))}
 	</section>
-	<section class="w-fyll h-screen p-14 flex justify-center items-center" id="contact">
+	<section class="w-fyll h-screen p-14 flex justify-around items-center font-gotham" id="contact">
 		<ShapeFrames client:visible slides={slidesContact} type="rectangular" />
-		<div></div>
+		<div class="h-full px-9 py-12 flex flex-col font-light justify-between items-start">
+			<div class="w-[28rem] flex items-center self-center justify-center bg-[#E31B6F13] rounded-lg text-xl">
+				<p class="text-[#5A0A35]">MORE INFORMATION</p>
+				<Icon pack="mdi" name="file-pdf-box" class="w-11 text-[#5A0A35]" />
+			</div>
+			<p class="text-3xl text-[#475694] font-medium">CONTACT US</p>
+			<ContactInfo icon={['ic', 'baseline-email' ]} text="INFO@SIGNOS.COM.CO" iconStyles="text-[#B02A8D]"
+				textStyles="text-[#74185C] text-2xl" />
+			<ContactInfo icon={['ic', 'baseline-place' ]}
+				text="Car. 14a No. 2A-08 San Pablo - Zipaquira, Cundinamarca - Colombia" iconStyles="text-[#9ECF4D]"
+				textStyles="text-[#536C29] text-xl" />
+			<ContactInfo icon={['ic', 'baseline-local-phone' ]} text="+57 313 3779890" iconStyles="text-[#FBB860]"
+				textStyles="text-[#B2854A] text-2xl" />
+			<div class="flex gap-7">
+				<a href="https://www.linkedin.com/company/signos-studio-s.a.s./" target="_blank">
+					<Icon pack="mdi" name="linkedin" class="w-11 text-[#475694]"/>
+				</a>
+				<a href="https://instagram.com/basic_tv_show?igshid=YmMyMTA2M2Y=" target="_blank">
+					<Icon pack="mdi" name="instagram" class="w-11 text-[#475694]" />
+				</a>
+				<a href="" target="_blank">
+					<Icon pack="ic" name="baseline-facebook" class="w-11 text-[#475694]" />
+				</a>
+			</div>
+		</div>
 	</section>
+	<footer class="w-full h-24 p-4 flex justify-center items-center bg-[#2B72B418]">
+		<img class="h-full" src="/src/assets/logos/FORMAS.gif"
+			alt="footer">
+	</footer>
 </Layout>
 
 <style>
@@ -256,6 +289,6 @@ const contentCards = [
 	}
 
 	.nav-scrolled {
-		background: rgba(137, 197, 225, 0.90);
+		background: rgba(137, 197, 225);
 	}
 </style>
