--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,42 +15,42 @@ type TextColors = {
 
 const mainText: TextColors[] = [{
 	text: 'Art',
-	cssClasses: 'text-[#EFCD4C] text-[5.626rem]',
+	cssClasses: 'text-[#EFCD4C] text-[3.626rem] xl:text-[5.626rem]',
 	lineBreak: false,
 },
 {
 	text: 'and',
-	cssClasses: 'text-white text-[5rem]',
+	cssClasses: 'text-white text-[3rem] xl:text-[5rem]',
 	lineBreak: false,
 },
 {
 	text: 'fun',
-	cssClasses: 'text-[#E41F89] text-[5.626rem]',
+	cssClasses: 'text-[#E41F89] text-[3.626rem] xl:text-[5.626rem]',
 	lineBreak: true,
 },
 {
 	text: 'at the same',
-	cssClasses: 'text-white text-[5rem]',
+	cssClasses: 'text-white text-[3rem] xl:text-[5rem]',
 	lineBreak: true,
 },
 {
 	text: 'place.',
-	cssClasses: 'text-[#24E0EC] text-[6rem]',
+	cssClasses: 'text-[#24E0EC] text-[4rem] xl:text-[6rem]',
 	lineBreak: false,
 }];
 
 const slides = [
-	"/src/assets/img/PAGINA_01.gif",
-	"/src/assets/img/PAGINA_02.gif",
-	"/src/assets/img/PAGINA_03.gif",
-	"/src/assets/img/PAGINA_04.gif",
-	"/src/assets/img/PAGINA_05.gif",
-	"/src/assets/img/PAGINA_06.gif",
-	"/src/assets/img/PAGINA_07.gif"
+	"/assets/img/PAGINA_01.gif",
+	"/assets/img/PAGINA_02.gif",
+	"/assets/img/PAGINA_03.gif",
+	"/assets/img/PAGINA_04.gif",
+	"/assets/img/PAGINA_05.gif",
+	"/assets/img/PAGINA_06.gif",
+	"/assets/img/PAGINA_07.gif"
 ];
 
 const slidesContact = [
-	"/src/assets/img/BASIC_01.gif",
+	"/assets/img/BASIC_01.gif",
 ];
 
 const cards = [
@@ -169,25 +169,25 @@ const cards = [
 const contentCards = [
 	{
 		text: 'BASIC is a program which objective is to identify the main basic design concepts that you can find in art and nature, and that are a fundamental part of any creation. Additionally, relevant artists, artworks and its movements were selected in order to easily identify some concepts of design.',
-		image: '/src/assets/content/ART_01.gif',
+		image: '/assets/content/ART_01.gif',
 		type: 'row',
 		id: 'art',
 	},
 	{
 		text: 'The project is developed in 3D digital animation. The characters do not have mouth, for this reason, their expressions will be recognized through the movement of their eyebrows, eyes and body gestures. Their bodies are constituted of basic shapes such as spheres, cubes and cylinders in bright and cheerful colors.',
-		image: '/src/assets/content/3D_STYLE_01.gif',
+		image: '/assets/content/3D_STYLE_01.gif',
 		type: 'columnReverse',
 		id: '3d',
 	},
 	{
 		text: 'BASIC has a symphonic musical treatment, mainly winds  and strings instruments, which brings each episode a magical personality, body, volume and will mainly improve the emotions of all audiences.',
-		image: '/src/assets/content/SINFONICA_LOHENGRIN_03.gif',
+		image: '/assets/content/SINFONICA_LOHENGRIN_03.gif',
 		type: 'column',
 		id: 'music',
 	},
 	{
 		text: 'BASIC and AUREA, are the main characters of this story and TEO (dog) and CELESTE (cat) their unconditional friends. All of them, made by modeling clay of very lively colors that are highlighted over the background. ',
-		image: '/src/assets/content/BASIC_PERSONAJE.gif',
+		image: '/assets/content/BASIC_PERSONAJE.gif',
 		type: 'rowReverse',
 		id: 'basic',
 	}
@@ -195,10 +195,12 @@ const contentCards = [
 ---
 
 <Layout title="Basic">
-	<section class="h-screen gradient flex justify-between items-center relative pt-32 px-32" id="home">
-		<header class="w-full flex justify-between items-center h-16 fixed top-0 left-0 z-50 px-32">
+	<section
+		class="flex flex-col h-full items-center relative pt-20 lg:pt-28 lg:px-24 xl:pt-32 xl:px-32 xl:h-screen lg:flex-row lg:justify-between gradient "
+		id="home">
+		<header class="w-full flex justify-between items-center h-16 fixed top-0 left-0 z-50 px-8 md:px-16 lg:px-32">
 			<div class="w-36">
-				<img src="src/assets/logos/BASIC.gif" alt="basic Logo">
+				<img src="/assets/logos/BASIC.gif" alt="basic Logo">
 			</div>
 			<Navbar />
 		</header>
@@ -227,27 +229,27 @@ const contentCards = [
 		</div>
 		<ShapeFrames client:visible slides={slides} />
 	</section>
-	<section class="w-full flex justify-center gap-24 px-5 py-9">
-		<img class="w-72 drop-shadow-logo" src="src/assets/logos/LOGO_SEÑAL_COL.gif" alt="señal col Logo">
-		<img class="w-72 drop-shadow-logo" src="src/assets/logos/LOGO_SIGNOS.gif" alt="signos Logo">
+	<section class="w-full flex flex-col lg:flex-row items-center justify-center gap-24 px-5 py-20">
+		<img class="w-72 drop-shadow-logo" src="/assets/logos/LOGO_SEÑAL_COL.gif" alt="señal col Logo">
+		<img class="w-72 drop-shadow-logo" src="/assets/logos/LOGO_SIGNOS.gif" alt="signos Logo">
 	</section>
-	<section class="flex justify-center items-center w-full pt-24 pb-12 gap-3">
+	<section class="flex flex-wrap justify-center items-center w-full pt-24 pb-12 gap-3 gap-y-7">
 		{cards.map((card, index) => (
 		<FeatureCard background={card.background} cardText={card.text} icon={card.icon} href="#content" id={card.id} />
 		))}
 	</section>
-	<section class="h-screen w-full relative" id="content">
-		<img class="absolute left-0 top-0 w-1/4 opacity-10 z-10" src="/src/assets/backgrounds/BACK_01_02.gif"
+	<section class="h-full xl:h-screen w-full py-20 relative" id="content">
+		<img class="absolute left-0 top-0 w-1/4 opacity-10 z-10" src="/assets/backgrounds/BACK_01_02.gif"
 			alt="background">
-		<img class="absolute right-0 bottom-0 w-5/12 opacity-10 z-10" src="/src/assets/backgrounds/BACK_01_03.gif"
+		<img class="absolute right-0 bottom-0 w-5/12 opacity-10 z-10" src="/assets/backgrounds/BACK_01_03.gif"
 			alt="background">
 		{contentCards.map((card, index) => (
 		<ContentCard text={card.text} image={card.image} type={card.type} id={card.id} />
 		))}
 	</section>
-	<section class="w-fyll h-screen p-14 flex justify-around items-center font-gotham" id="contact">
+	<section class="w-full h-full xl:h-screen px-14 py-20 flex flex-col lg:flex-row justify-around items-center font-gotham" id="contact">
 		<ShapeFrames client:visible slides={slidesContact} type="rectangular" />
-		<div class="h-full px-9 py-12 flex flex-col font-light justify-between items-start">
+		<div class="h-[40rem] xl:h-screen px-4 xl:px-9 py-12 flex flex-col font-light justify-between items-start">
 			<div class="w-[28rem] flex items-center self-center justify-center bg-[#E31B6F13] rounded-lg text-xl">
 				<p class="text-[#5A0A35]">MORE INFORMATION</p>
 				<Icon pack="mdi" name="file-pdf-box" class="w-11 text-[#5A0A35]" />
@@ -262,20 +264,19 @@ const contentCards = [
 				textStyles="text-[#B2854A] text-2xl" />
 			<div class="flex gap-7">
 				<a href="https://www.linkedin.com/company/signos-studio-s.a.s./" target="_blank">
-					<Icon pack="mdi" name="linkedin" class="w-11 text-[#475694]"/>
+					<Icon pack="mdi" name="linkedin" class="w-11 text-[#475694]" />
 				</a>
 				<a href="https://instagram.com/basic_tv_show?igshid=YmMyMTA2M2Y=" target="_blank">
 					<Icon pack="mdi" name="instagram" class="w-11 text-[#475694]" />
 				</a>
-				<a href="" target="_blank">
+				<a href="https://www.facebook.com/SignosStudio" target="_blank">
 					<Icon pack="ic" name="baseline-facebook" class="w-11 text-[#475694]" />
 				</a>
 			</div>
 		</div>
 	</section>
 	<footer class="w-full h-24 p-4 flex justify-center items-center bg-[#2B72B418]">
-		<img class="h-full" src="/src/assets/logos/FORMAS.gif"
-			alt="footer">
+		<img class="h-full" src="/assets/logos/FORMAS.gif" alt="footer">
 	</footer>
 </Layout>
 
