--- a/src/components/ContactInfo/index.astro
+++ b/src/components/ContactInfo/index.astro
@@ -11,7 +11,9 @@ export interface props {
 const { iconStyles, textStyles, text, icon } = Astro.props;
 ---
 
-<div class="flex items-center">
-    <Icon pack={icon[0]} name={icon[1]} class={`w-11 ${iconStyles}`} />
-    <p class={`ml-6 ${textStyles}`}>{text}</p>
+<div class="w-full flex items-center">
+    <div class="w-1/6 md:w-1/5 lg:w-auto">
+        <Icon pack={icon[0]} name={icon[1]} class={`w-8 lg:w-11 ${iconStyles}`} />
+    </div>
+    <p class={`w-5/6 md:w-4/5 lg:w-auto lg:ml-4 ${textStyles}`}>{text}</p>
 </div>
