--- a/src/components/ContentCard/index.astro
+++ b/src/components/ContentCard/index.astro
@@ -9,12 +9,12 @@ export interface Props {
 const types = {
     column: {
         div: 'flex-col justify-end items-center',
-        img: 'w-7/12 h-auto',
+        img: 'w-full lg:w-7/12 h-auto',
         text: 'max-w-full text-center',
     },
     columnReverse: {
         div: 'flex-col xl:flex-col-reverse justify-center items-center',
-        img: 'w-4/5 h-auto',
+        img: 'w-full xl:w-4/5 h-auto',
         text: 'max-w-full text-center',
     },
     row: {
@@ -23,16 +23,16 @@ const types = {
         text: 'max-w-md',
     },
     rowReverse: {
-        div: 'flex-col md:flex-row-reverse justify-center items-end',
-        img: 'w-1/2 h-auto',
-        text: 'max-w-md text-right',
+        div: 'flex-col xl:flex-row-reverse justify-center items-center xl:items-end',
+        img: 'w-full md:w-3/4 xl:w-1/2 h-auto mt-8 xl:mt-0',
+        text: 'max-w-md xl:text-right',
     },
 }
 
 const { text, image, type, id } = Astro.props;
 ---
 
-<div class={`w-full h-full px-14 w-/ flex relative z-30 ${types[type].div}`} id={id}>
+<div class={`w-full h-full px-14 flex relative z-30 ${types[type].div}`} id={id}>
     <p class={`font-gotham font-medium text-xl text-center text-[#475694] self-center ${types[type].text} xl:text-2xl`}>{text}</p>
     <img class={types[type].img} src={image} alt={image.replace(/^.*\//, '' )}>
 </div>
