--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -196,7 +196,7 @@ const contentCards = [
 
 <Layout title="Basic">
 	<section
-		class="flex flex-col h-full items-center relative pt-20 lg:pt-28 lg:px-24 xl:pt-32 xl:px-32 xl:h-screen lg:flex-row lg:justify-between gradient "
+		class="flex flex-col h-full items-center relative pt-20 px-3 lg:pt-28 lg:px-24 xl:pt-32 xl:px-32 xl:h-screen lg:flex-row lg:justify-between gradient "
 		id="home">
 		<header class="w-full flex justify-between items-center h-16 fixed top-0 left-0 z-50 px-8 md:px-16 lg:px-32">
 			<div class="w-36">
@@ -238,7 +238,7 @@ const contentCards = [
 		<FeatureCard background={card.background} cardText={card.text} icon={card.icon} href="#content" id={card.id} />
 		))}
 	</section>
-	<section class="h-full xl:h-screen w-full py-20 relative" id="content">
+	<section class="h-full xl:h-screen w-full py-20 lg:py-0 relative" id="content">
 		<img class="absolute left-0 top-0 w-1/4 opacity-10 z-10" src="/assets/backgrounds/BACK_01_02.gif"
 			alt="background">
 		<img class="absolute right-0 bottom-0 w-5/12 opacity-10 z-10" src="/assets/backgrounds/BACK_01_03.gif"
