--- a/src/components/Navbar/components/ItemMenu.astro
+++ b/src/components/Navbar/components/ItemMenu.astro
@@ -3,8 +3,16 @@ export interface Props {
     label: string,
     href: string,
     isLink?: boolean,
+    isLateralMenu?: boolean,
 }
-const { label, href, isLink } = Astro.props;
+const { label, href, isLink, isLateralMenu } = Astro.props;
 ---
 
-<a href={href} target={isLink && '_blank' } class="font-gotham font-bold uppercase text-white">{label}</a>
+<a href={href} target={isLink && '_blank' } class={`font-gotham font-bold uppercase text-white ${isLateralMenu
+    ? 'text-2xl xs:text-[3rem] textShadow' : 'text-lg' } `}>{label}</a>
+
+<style>
+    .textShadow {
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+</style>
