fixes responsive and new images

--- a/src/components/Navbar/index.astro
+++ b/src/components/Navbar/index.astro
@@ -14,7 +14,7 @@ import { Icon } from 'astro-icon'
 </div>
 
 <div class="block sm:hidden">
-    <div class="w-2/3 h-screen justify-center items-end px-10 gap-y-16 flex-col absolute top-0 right-0 mt-16 lateralMenu"
+    <div class="w-2/3 h-screen justify-start items-end px-10 pt-10 gap-y-16 flex-col absolute top-0 right-0 mt-16 lateralMenu"
         id="lateralMenu">
         <ItemMenu label="home" href="#home" isLateralMenu={true} />
         <ItemMenu label="developing" href="#developing" isLateralMenu={true} />
